fixed distorted photos and cleaned some code up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,22 +24,6 @@
 .jumbotron {
     max-width: 100%;
 }
-/* .jumbotron img{
-    margin-top: 1000px;
-} */
-/* .about {
-    background-color: #ffffff;
-    max-width: 80%;
-    margin-top: 400px;
-    display: inline-block;
-} */
-/* .about>img {
-    width: 20%;
-    height: 45%;
-    float: left;
-    margin-right: 45px;
-    
-} */
 .container {
     max-width: 75%;
 }
@@ -53,11 +37,11 @@
     margin-top: 400px;
 }
 .instaimg img {
-    margin-bottom: 30px;
+    margin: 10px;
     filter: gray; /* IE6-9 */
      -webkit-filter: grayscale(100%);
     width: 100%;
-    height: 380px;
+    height: 95%;
 }
 .instaimg img:hover {
     filter: none;
